BGE/UV Image Editor, Animated Sprite have max value of 128 when you can make 16x16 grids #43793

Closed
opened 2015-02-24 14:30:04 +01:00 by Martin Lindelöf · 8 comments

System Information
Operating system and graphics card
Win 8

Blender Version
Broken: (example: 2.73 build 2015-02-20
Worked: (optional)

Short description of error
You can max enter 16x16 cells for a sprite sheet, == 256 cells of animation.
that's fine, but the max value for animating a sprite is start:128 end:128 that needs to double to 256

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
just make a image data block and enable animation and enter cells.
http://prntscr.com/697tpj

**System Information** Operating system and graphics card Win 8 **Blender Version** Broken: (example: 2.73 build 2015-02-20 Worked: (optional) **Short description of error** You can max enter 16x16 cells for a sprite sheet, == 256 cells of animation. that's fine, but the max value for animating a sprite is start:128 end:128 that needs to double to 256 **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps just make a image data block and enable animation and enter cells. http://prntscr.com/697tpj
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MartinLindelof

Added subscriber: @MartinLindelof
Jorge Bernal self-assigned this 2015-03-03 00:23:19 +01:00

Added subscriber: @panzergame

Added subscriber: @panzergame

Hello, do you have an example .blend ?

Hello, do you have an example .blend ?
Member

Only select "tiles" option and start the game engine
animation_textures.blend

Only select "tiles" option and start the game engine [animation_textures.blend](https://archive.blender.org/developer/F148016/animation_textures.blend)
Member

Proposed fix: D1164

Proposed fix: [D1164](https://archive.blender.org/developer/D1164)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Close by commit 90f36d

Close by commit 90f36d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43793
No description provided.